base/mean-app/frontend-deploymentconfig.yaml
kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  annotations:
    app.openshift.io/connects-to: backend
  labels:
    app: frontend
    app.kubernetes.io/component: frontend
    app.kubernetes.io/instance: frontend
    app.kubernetes.io/name: frontend
    app.kubernetes.io/part-of: mean-app
    app.openshift.io/runtime: nodejs
    app.openshift.io/runtime-version: "10"
  name: frontend
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    app: frontend
    deploymentconfig: frontend
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: frontend
        deploymentconfig: frontend
    spec:
      containers:
      - name: appfrontend
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8443
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  test: false
  triggers:
  - type: ImageChange
    imageChangeParams:
      automatic: false
      containerNames:
      - frontend
      from:
        kind: ImageStreamTag
        name: frontend:latest
        namespace: cicd
