base/mean-app/mongodb-svc.yaml
kind: Service
apiVersion: v1
metadata:
  annotations:
    template.openshift.io/expose-uri: mongodb://{.spec.clusterIP}:{.spec.ports[?(.name=="mongo")].port}
  labels:
    template: mongodb-persistent-template
  name: mongodb
  namespace: mean
spec:
  ports:
  - name: mongo
    port: 27017
    protocol: TCP
    targetPort: 27017
  selector:
    name: mongodb
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
