base/mean-app/backend-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: backend
    app.kubernetes.io/component: backend
    app.kubernetes.io/instance: backend
    app.kubernetes.io/name: backend
    app.kubernetes.io/part-of: mean-app
  name: backend
spec:
  path: /api
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: backend
    weight: 100
  wildcardPolicy: None
status:
  ingress: []
