base/mean-app/frontend-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  creationTimestamp: null
  labels:
    app: frontend
    app.kubernetes.io/component: frontend
    app.kubernetes.io/instance: frontend
    app.kubernetes.io/name: frontend
    app.kubernetes.io/part-of: mean-app
  name: frontend
spec:
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: frontend
    weight: 100
  wildcardPolicy: None
status:
  ingress: []
